Major UI UX Update w/o desc - part 2

--- a/GEOVIZ-Viewer/index.html
+++ b/GEOVIZ-Viewer/index.html
@@ -3,9 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>GEOVIZ Viewer</title>
+    <meta property="og:url"           content="http://geoviz.geotricks.net/" />
+    <meta property="og:type"          content="website" />
+    <meta property="og:title"         content="GEOVIZ" />
+    <meta property="og:description"   content="A WebGL-backed AIS Visualization" />
+    <meta property="og:image"         content="http://geoviz.geotricks.net/static/geoviz-sc.png" />
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <!-- Load Facebook SDK for JavaScript -->
+
   </body>
+
 </html>
